# parameterizable

./: README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/mixinforge/: __init__.py
src/mixinforge/command_line_tools/: basic_file_utils.py  project_analyzer.py
src/mixinforge/context_managers/: output_capturer.py
src/mixinforge/mixins_and_metaclasses/: cacheable_properties_mixin.py  guarded_init_metaclass.py  immutable_mixin.py  parameterizable_mixin.py  single_thread_enforcer_mixin.py
src/mixinforge/utility_functions/: __init__.py  atomics_detector.py  dict_sorter.py  env_var_name_validator.py  json_processor.py  nested_collections_inspector.py  nested_collections_transformer.py  notebook_checker.py  package_manager.py
tests/command_line_tools/: test_project_analyzer_file_analysis.py
tests/context_managers/: test_output_capturer.py
tests/mixins_and_metaclasses/cacheable_properties/: test_cacheable_properties_mixin_get_single.py  test_cacheable_properties_mixin_get_status.py
tests/mixins_and_metaclasses/metaclass/: test_guarded_init_metaclass.py  test_guarded_init_metaclass_helpers.py
tests/mixins_and_metaclasses/mixins/: test_immutable_mixin.py  test_immutable_parameterizable_mixin.py
tests/mixins_and_metaclasses/parameterizable/: test_parameterizable.py
tests/utility_functions/: test_env_var_name_validator.py  test_package_manager.py  test_package_manager_uninstall_verification.py
